COUNT BY NUMBER OF PARTICIPANTS